--- a/package.json
+++ b/package.json
@@ -13,12 +13,22 @@
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-slot": "^1.2.3",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.536.0",
     "next": "15.4.5",
     "prisma": "^6.13.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -27,6 +37,7 @@
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
+    "tw-animate-css": "^1.3.6",
     "typescript": "^5"
   }
 }
