--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
+    "next-auth": "^5.0.0-beta.29",
     "prisma": "^6.13.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.0.14"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
